--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,3 +67,14 @@ dependencies {
     //noinspection GradleCompatible
     implementation "com.android.support:support-compat:28.0.0"
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "androidx.appcompat") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "1.+"
+            }
+        }
+    }
+}
